[workspace]
resolver = "2"

members = ["day-*"]
default-members = ["day-*"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
nom = "*"
nom-supreme = "*"
rayon = "*"
indicatif = "*"
num = "*"
itertools = "*"
rstest = "*"
bevy = "*"
glam = "*"
